dashboard basic layout

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div id="dashboard">
+    <div id="header" class="boarder-bottom">
+        header
+    </div>
+    <div id="container">
+        <div id="upload">
+            upload
+        </div>
+        <div id="progess">
+            progress bar
+        </div>
+    </div>
+</div>
