--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,22 @@
 <div id="dashboard">
     <div id="header" class="boarder-bottom">
-        header
+        <button>Home</button>
+        <button>About us</button>
     </div>
     <div id="container">
         <div id="upload">
             upload
+            <button (click)="convert()">start convert</button>
         </div>
         <div id="progess">
-            progress bar
+            <div id="progressWindow" >
+                <div id="progressBar" *ngIf="displayProgressBar">
+                    <mat-progress-bar mode="determinate" [value]="value"></mat-progress-bar>
+                </div>
+            </div>
+            <div id="export">
+                <button>export code</button>
+            </div>
         </div>
     </div>
 </div>
