--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,4 +1,12 @@
-<div id="loading" class="loading" *ngIf="showLoading">
-    <div class="progress-5"></div>
-    <div>Loading</div>
+<div id="loading" *ngIf="showLoading">
+    <div class="flex-center">
+        <div class="loading three-balls-bounce">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+            <div class="shadow"></div>
+        </div>
+    </div>
 </div>
