--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,20 +1,29 @@
 #dashboard{
-    width: 1024px;
-    height: 600px;
-    margin: 0 auto;
+    
+    
     // border: 1px solid black;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     // background: #5c9ad5;
-    #header,
+    margin: 0;
+    // #header,
     #container{
+        width: 1024px;
+        height: 400px;
         display: block;
-        width: 100%;
+        margin: 0 auto;
     }
     #description {
-        padding-bottom: 20px;
-        margin: 20px;
+        padding-bottom: 30px;
+        display: flex;
+        justify-content:center;
+        font-size: 20px;
+    }
+    #description_1 {
+        padding-bottom: 30px;
+        display: flex;
+        justify-content:center;
     }
 
     #header{
@@ -22,20 +31,20 @@
         display: flex;
         align-items: center;
         padding: 0 20px;
-        background: #0143e2;
+        // background: #0143e2;
         opacity: 0.8;
         #headerText {
             font-size: xx-large;
             font-family: myFont;
             cursor: pointer;
-            color: #FFFF;
+            // color: #FFFF;
         }
         button{
             padding: 10px;
             margin: 10px;
             border-radius: 10px;
             font-size: 18px;
-            color: #FFFF;
+            // color: #FFFF;
             // border-color: #FFFF;
             background: transparent;
             border: none;
@@ -45,10 +54,10 @@
             cursor: pointer;
         }
     }
-    #description {
-        color: #0143e2;
-        opacity: 0.6;
-    }
+    // #description {
+    //     color: #0143e2;
+    //     opacity: 0.6;
+    // }
     #container{
         display: flex;
         justify-content: space-between;
@@ -57,7 +66,7 @@
         #progess{
             // display: flex;
             margin: 0 20px;
-            box-shadow: 1px 1px 1px 1px #4A4A4A;
+            box-shadow:2px 2px 5px #b4b4b4;
             border-radius: 10px;
             width: 50%;
             height: 100%;
@@ -74,10 +83,20 @@
                     display: flex;
                     justify-content: center;
                     padding-bottom: 10px;
-                    label b {
+                    color: #0143e2;
+                    label b{
                         display: flex;
                         justify-content: center;
                         font-size: 16px;
+                        
+                    }
+                }
+                #uploadImg {
+                    display: flex;
+                    justify-content: center;
+                    img{
+                        width: 216px;
+                        height: 216px;
                     }
                 }
                 #progressImg  {
@@ -94,27 +113,29 @@
                 justify-content: center;
                 margin: 20px;
                 button {
-                    padding: 2% 40%;
+                    padding: 10px 25px;
+                        font-size: 10px;
+                        font-weight: 300;
+                        border: none;
+                        outline: none;
+                        background: #5356ad;
+                        color: #fff;
+                        border-radius: 5px;
+                        cursor: pointer;
+                    // padding: 2% 40%;
                     border-radius: 10px;
-                    background: #0143e2;
-                    color: #FFFF;
-                    border-color: #FFFF;
                     // box-shadow: 0px 0px 2px 2px rgb(0,0,0);
                 }
             }
         }
         #upload{
-            box-shadow: 1px 1px 1px 1px #4A4A4A;
+            box-shadow:2px 2px 5px #b4b4b4;
             border-radius: 10px;
             height: 100%;
             #uploadBox{
                 height: 100%;
-                margin: 20px;
                 .file{
                     position: relative;
-                    // display: flex;
-                    // align-items: center;
-                    // justify-content: center;
                     background-color: #6af59a;
                     border: 2.4px black dashed;
                     padding: 2px;
@@ -151,12 +172,55 @@
                     top: 50%;
                     transform: translate(0,-50%);
                     width: 100%;
-                    font-size: large;
+                    // font-size: large;
                     height: auto;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     flex-direction: row;
+                }
+                .drag-area {
+                    // border: 2px dashed #5356ad;
+                    height: 150px;
+                    // width: 300px;
+                    border-radius: 5px;
+                    display: flex;
+                    left: 20px;
+                    // position: relative;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    .icon {
+                        font-size: 60px;
+                        color: #0143e2;
+                    }
+                    header {
+                        font-size: 15px;
+                        font-weight: 500;
+                        color: #0143e2;
+                    }
+                    span {
+                        font-size: 15px;
+                        font-weight: 500;
+                        color: #0143e2;
+                        margin: 10px 0 15px 0;
+                    }
+                    button {
+                        padding: 10px 25px;
+                        font-size: 10px;
+                        font-weight: 300;
+                        border: none;
+                        outline: none;
+                        background: #5356ad;
+                        color: #fff;
+                        border-radius: 5px;
+                        cursor: pointer;
+                        border-radius: 10px;
+                    }
+                    img {
+                        height: 50%;
+                        width: 50%;
+                    }
                 }
             }
             // form{
