add schema widgets

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,6 +10,7 @@
     <div id="description_1">All you need to do is import the design into our Intelligent UI Master, and a fresh schema template will be generated for you immediately.</div>
     <div id="container">
         <div id="upload">
+			<button (click)="convert()">start convert</button>
             <div id="uploadBox">
                 <div id="progressWindow">
                     <div id="uploadImg">
@@ -42,7 +43,7 @@
                 </div>
             </div>
             <div id="export">
-                <button *ngIf="displayExportButton">Export Code</button>
+                <button *ngIf="displayExportButton" (click)="export()" [disabled]="!allow">export code</button>
             </div>
         </div>
     </div>
