--- a/src/app/libs/schema-card/schema-card.component.html
+++ b/src/app/libs/schema-card/schema-card.component.html
@@ -1,1 +1,15 @@
-<p>schema-card works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title-group>
+        <mat-card-title>UI Master</mat-card-title>
+        <mat-card-subtitle>your best code helper</mat-card-subtitle>
+        <img mat-card-md-image src="assets/images/cardschema.svg"  alt="Image of a Shiba Inu">
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        {{longText}}
+    </mat-card-content>
+</mat-card>
+ 
+  
+  
