--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -126,6 +126,10 @@
                     border-radius: 10px;
                     // box-shadow: 0px 0px 2px 2px rgb(0,0,0);
                 }
+				button:disabled{
+                    background: #5356ad;
+                    opacity: 0.5;
+                }
             }
         }
         #upload{
