--- a/src/app/libs/schema-input/schema-input.component.html
+++ b/src/app/libs/schema-input/schema-input.component.html
@@ -1,1 +1,16 @@
-<p>schema-input works!</p>
+<!-- <label><b>LOGIN</b></label> -->
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+        <mat-label>User Name</mat-label>
+        <input matInput value=" ">
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+        <mat-label>Password</mat-label>
+        <input matInput value=" ">
+    </mat-form-field>
+</form>
+<!-- <div id="bottom">
+    <button mat-raised-button>Cancel</button>
+    <button mat-raised-button color="primary">Login</button>
+</div> -->
