show schema page

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div id="progess">
-            <div id="progressWindow" >
+            <div id="progressWindow" *ngIf="showSchemaPage; else SchemaTemp">
                 <div id="progressImg">
                     <img src="assets/images/dataOutput.svg">
                 </div>
@@ -42,6 +42,9 @@
                     <mat-progress-bar *ngIf="displayProgressBar" mode="determinate" [value]="value"></mat-progress-bar>
                 </div>
             </div>
+            <ng-template #SchemaTemp>
+                <app-layout-engine [config]="schemaConfig" class="app-layout"></app-layout-engine>
+            </ng-template>
             <div id="export">
                 <button *ngIf="displayExportButton" (click)="export()" [disabled]="!allow">export code</button>
             </div>
