--- a/src/app/engine/layout-engine/layout-engine.component.scss
+++ b/src/app/engine/layout-engine/layout-engine.component.scss
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  background-color: #f5f5f5;
+  background-color: #fff;
   .layout-header {
     border-bottom: 1px solid #cccccc;
   }
