--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -133,7 +133,8 @@
             }
             .app-layout{
                 display: block;
-                height: 330px;
+                height: 300px;
+                padding-top: 20px;
             }
         }
         #upload{
