--- a/src/app/engine/layout-engine/layout-engine.component.scss
+++ b/src/app/engine/layout-engine/layout-engine.component.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   background-color: #fff;
   .layout-header {
-    border-bottom: 1px solid #cccccc;
+    // border-bottom: 1px solid #cccccc;
   }
 
   .layout-body {
@@ -14,6 +14,6 @@
   }
 
   .layout-footer {
-    border-top: 1px solid #cccc;
+    // border-top: 1px solid #cccc;
   }
 }
