--- a/src/app/libs/schema-table/schema-table.component.html
+++ b/src/app/libs/schema-table/schema-table.component.html
@@ -1,35 +1,35 @@
-<label>Your Transaction List</label>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="schema-table">
+  <label>Your Transaction List</label>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
-  
+
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> Date </th>
       <td mat-cell *matCellDef="let element"> {{element.date}} </td>
     </ng-container>
-  
+
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Transaction Amount </th>
       <td mat-cell *matCellDef="let element"> {{element.transactionAmount}} </td>
     </ng-container>
-  
+
     <!-- Weight Column -->
     <ng-container matColumnDef="weight">
       <th mat-header-cell *matHeaderCellDef> Description </th>
       <td mat-cell *matCellDef="let element"> {{element.description}} </td>
     </ng-container>
-  
+
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef> Transaction Reference ID</th>
       <td mat-cell *matCellDef="let element"> {{element.transactionReferenceId}} </td>
     </ng-container>
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  
-  
+</div>
