--- a/src/app/libs/schema-table/schema-table.component.scss
+++ b/src/app/libs/schema-table/schema-table.component.scss
@@ -1,7 +1,5 @@
 table {
-    width: 600px;
-    // border-radius: 10px;
-    margin: 10px;
+    width: 100%;
 }
 
 .mat-table {
@@ -13,4 +11,9 @@ table {
 label {
     padding-left: 10px;
     font-size: 18px;
+}
+
+.schema-table{
+    width: 90%;
+    margin: 0 auto;
 }
