--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,4 @@
-#dashboard{
-    
-    
+#dashboard {
     // border: 1px solid black;
     box-sizing: border-box;
     display: flex;
@@ -8,7 +6,7 @@
     // background: #5c9ad5;
     margin: 0;
     // #header,
-    #container{
+    #container {
         width: 1024px;
         height: 400px;
         display: block;
@@ -17,16 +15,20 @@
     #description {
         padding-bottom: 30px;
         display: flex;
-        justify-content:center;
+        justify-content: center;
         font-size: 20px;
     }
-    #description_1 {
-        padding-bottom: 30px;
+    #description_2 {
+        margin-bottom: 30px;
         display: flex;
-        justify-content:center;
+        justify-content: center;
     }
-
-    #header{
+    #description_1 {
+        padding-bottom: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    #header {
         height: 100px;
         display: flex;
         align-items: center;
@@ -39,7 +41,7 @@
             cursor: pointer;
             // color: #FFFF;
         }
-        button{
+        button {
             padding: 10px;
             margin: 10px;
             border-radius: 10px;
@@ -58,25 +60,25 @@
     //     color: #0143e2;
     //     opacity: 0.6;
     // }
-    #container{
+    #container {
         display: flex;
         justify-content: space-between;
         flex-grow: 1;
         #upload,
-        #progess{
+        #progess {
             // display: flex;
             margin: 0 20px;
-            box-shadow:2px 2px 5px #b4b4b4;
+            box-shadow: 2px 2px 5px #b4b4b4;
             border-radius: 10px;
             width: 50%;
             height: 100%;
             // background: #5c9ad5;
-            #progressWindow{
+            #progressWindow {
                 margin: 20px;
                 // padding-bottom: 10%;
                 // border: dashed;
                 height: auto;
-                #progressBar{
+                #progressBar {
                     margin: 20px;
                 }
                 #progressText {
@@ -84,66 +86,64 @@
                     justify-content: center;
                     padding-bottom: 10px;
                     color: #0143e2;
-                    label b{
+                    label b {
                         display: flex;
                         justify-content: center;
                         font-size: 16px;
-                        
                     }
                 }
                 #uploadImg {
                     display: flex;
                     justify-content: center;
-                    img{
+                    img {
                         width: 216px;
                         height: 216px;
                     }
                 }
-                #progressImg  {
+                #progressImg {
                     display: flex;
                     justify-content: center;
-                    img{
+                    img {
                         max-width: 50%;
                     }
                 }
             }
-            #export{
+            #export {
                 display: flex;
                 align-items: flex-end;
                 justify-content: center;
                 margin: 20px;
                 button {
                     padding: 10px 25px;
-                        font-size: 10px;
-                        font-weight: 300;
-                        border: none;
-                        outline: none;
-                        background: #5356ad;
-                        color: #fff;
-                        border-radius: 5px;
-                        cursor: pointer;
+                    font-size: 15px;
+                    font-weight: 500;
+                    border: none;
+                    outline: none;
+                    background: #5356ad;
+                    color: #fff;
+                    cursor: pointer;
                     // padding: 2% 40%;
                     border-radius: 10px;
                     // box-shadow: 0px 0px 2px 2px rgb(0,0,0);
                 }
-				button:disabled{
+                button:disabled {
                     background: #5356ad;
                     opacity: 0.5;
                 }
             }
-            .app-layout{
+            .app-layout {
                 display: block;
                 height: 300px;
                 padding-top: 20px;
             }
         }
-        #upload{
-            box-shadow:2px 2px 5px #b4b4b4;
+        #upload {
+            box-shadow: 2px 2px 5px #b4b4b4;
             border-radius: 10px;
             height: 100%;
-            #uploadBox{
+            #uploadBox {
                 height: 100%;
-                .file{
+                .file {
                     position: relative;
                     background-color: #6af59a;
                     border: 2.4px black dashed;
@@ -153,10 +153,9 @@
                     line-height: 20px;
                     text-decoration: none;
                     height: 60%;
-                    a{
+                    a {
                         text-decoration: none;
-                        
-                        input{
+                        input {
                             position: absolute;
                             display: block;
                             width: 100%;
@@ -165,21 +164,20 @@
                             z-index: 11;
                         }
                     }
-                    a:hover{
-                        background:#AADFFD;
-                        border-color:#78c3f3;
+                    a:hover {
+                        background: #AADFFD;
+                        border-color: #78c3f3;
                         color: #004974;
                         text-decoration: none;
                     }
-                    a:link{
+                    a:link {
                         background-color: #D0EEFF;
                     }
-    
                 }
-                .selectFileBox{
+                .selectFileBox {
                     position: relative;
                     top: 50%;
-                    transform: translate(0,-50%);
+                    transform: translate(0, -50%);
                     width: 100%;
                     // font-size: large;
                     height: auto;
@@ -214,10 +212,29 @@
                         color: #0143e2;
                         margin: 10px 0 15px 0;
                     }
+                    #upload_button {
+                        display: flex;
+                        justify-content: space-between;
+                        .file-upload-button {
+                            padding: 10px 25px;
+                            font-size: 10px;
+                            font-weight: 300;
+                            border: none;
+                            outline: none;
+                            background: #5356ad;
+                            border-radius: 5px;
+                            cursor: pointer;
+                            border-radius: 10px;
+                            margin-right: 2rem;
+                        }
+                        span {
+                            color: #fff;
+                        }
+                    }
                     button {
                         padding: 10px 25px;
-                        font-size: 10px;
-                        font-weight: 300;
+                        font-size: 15px;
+                        font-weight: 500;
                         border: none;
                         outline: none;
                         background: #5356ad;
@@ -238,7 +255,7 @@
             //     border: 2px solid #78c3f3;
             // }
         }
-        ::ng-deep .mat-progress-bar {
+         ::ng-deep .mat-progress-bar {
             height: 15px;
             border-radius: 10px;
         }
