--- a/src/app/libs/schema-input/schema-input.component.html
+++ b/src/app/libs/schema-input/schema-input.component.html
@@ -1,12 +1,12 @@
 <!-- <label><b>LOGIN</b></label> -->
 <form class="example-form">
     <mat-form-field class="example-full-width">
-        <mat-label>User Name</mat-label>
+        <mat-label>{{label1}}</mat-label>
         <input matInput value=" ">
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
-        <mat-label>Password</mat-label>
+        <mat-label>{{label2}}</mat-label>
         <input matInput value=" ">
     </mat-form-field>
 </form>
