--- a/src/app/engine/widget-engine/widget-engine.component.html
+++ b/src/app/engine/widget-engine/widget-engine.component.html
@@ -1,3 +1,3 @@
-<div class="widget-container">
+<div class="{{class ? class : 'widget-container'}}">
   <ng-template #widgetsRef></ng-template>
 </div>
