--- a/src/app/libs/schema-button/schema-button.component.html
+++ b/src/app/libs/schema-button/schema-button.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="isBasic; else primaryTemp">
-    <button mat-raised-button>basic button</button>
+    <button mat-raised-button>{{buttonText}}</button>
 </div>
 <ng-template #primaryTemp>
     <div>
-        <button mat-raised-button color="primary">primary button</button>
+        <button mat-raised-button color="primary">{{buttonText}}</button>
     </div>
 </ng-template>
