--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .as-pb-24 {
     padding-bottom: 24px;
 }
+
+.as-ptb-24 {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
