Add Customer Webpack

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: 'myFont'; 
     src: url('assets/font/Monoton-Regular.ttf'); 
 }
+
+.test-replace {
+    background-image: url('assets/images/copilot_fix.jpg');
+}
+
+.test-assets {
+    background-image: url('assets/images/copilot_fix.jpg');
+}
