--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -1,10 +1,12 @@
 @import '_colors.scss';
 
 // Use each function to generate css for each theme
-
 @each $theme, $colors in $themes {
     .theme-#{$theme} {
         background-color: color($colors, 'tertiary');
         color: color($colors, 'primary');
+        --ag-grid-primary-color: #{map-get($colors, 'primary')};
+        --ag-grid-secondary-color: #{map-get($colors, 'secondary')};
+        --ag-grid-odd-row-background-color: #{map-get($colors, 'tertiary')};
     }
 }
